--- a/style.css
+++ b/style.css
@@ -1,25 +1,41 @@
-html {
-    height: 320px;
-    padding-bottom: 16px;
+:root {
+    --main-border-color: rgba(71, 71, 71, 0.35);
+    --focus-border-color: rgba(146, 146, 146, 0.65);
+    --whatsappish-green: #00bfa5;
 }
 
 body {
     background-color: #F2F2F2;
     padding: 8px;
-    margin-bottom: 16px;
+    border-bottom: 8px solid var(--whatsappish-green);
+    margin: 0;
+}
+
+#title {
+    color: white;
+    background: var(--whatsappish-green);
+    padding: 8px 4px;
+    margin: -8px -8px 4px;
+    font-size: .95rem;
 }
 
 p {
     font-size: 0.8rem;
     font-weight: 500;
 }
+
 #phonenumber,
 #countrycode,
 #text {
     margin-left: 12px;
     border-radius: 4px;
-    border: 1px rgba(71, 71, 71, 0.35) solid;
+    border: 1px var(--main-border-color) solid;
     padding: 4px;
+}
+
+input:focus-within,
+#messagecontent:focus-within {
+    outline-color: var(--focus-border-color);
 }
 
 #text {
@@ -33,11 +49,10 @@ p {
 #messagecontent {
     padding: 8px;
     border-radius: 4px;
-    border: 1px rgba(71, 71, 71, 0.35) solid;
+    border: 1px var(--main-border-color) solid;
     font-family: inherit;
-    width: 385px;
+    min-width: 384px;
 }
-
 
 #sendmessage:hover {
     box-shadow: 1px 1px #b9b9b9, -1px 0 0.4em #c5c5c5;
@@ -50,7 +65,7 @@ p {
     position: relative;
     width: 50px;
     height: 50px;
-    background-color: lightgreen;
+    background-color: var(--whatsappish-green);
     border-radius: 100%;  
 }
 
